name:                bi-zipper
version:             0.1.0.0
synopsis:            Simple bidirectional zipper from any Traversable.
license:             BSD3
license-file:        LICENSE
author:              András Kovács
maintainer:          puttamalac@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.8
stability:           Experimental
description:
    Generic zippers with forward and backward movement from any Traversable.
    It is a minor extension to Oleg Kiselyov's zipper creation scheme described here: <http://okmij.org/ftp/continuations/zipper.html#traversable>


Source-Repository head
    Type: git
    Location: https://github.com/AndrasKovacs/bi-zipper

library
    exposed-modules:    Data.Traversable.BiZipper, Control.Monad.BiZipper
    build-depends:      base ==4.6.*, mtl == 2.1.*, transformers ==0.3.*

test-suite test
    main-is:            Tests.hs
    type:               exitcode-stdio-1.0
    Build-depends:      base == 4.*,
                        bi-zipper == 0.1.*,
                        QuickCheck == 2.5.*,
                        containers >=0.4.2,
                        test-framework-quickcheck2 == 0.3.*,
                        test-framework == 0.8.*